# disk-static-hash

./: .gitignore  CMakeLists.txt
include/: bucket.h  dependencies.h  property.h  static_hash.h
src/: main.cpp
utils/: buffer_size.h  file_utils.h  hash_function.h  record.h
